Works for eclipse.